<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.danielortizagudelo.practica2.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />

    <EditText
        android:id="@+id/n1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/n2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor2"
        android:inputType="number"
        />



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/divi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divi"
            android:onClick="onRadioButtonClicked"/>



    </RadioGroup>


    <EditText
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        />






</LinearLayout>
